# django-debug-toolbar

./: .pre-commit-config.yaml  .travis.yml  Makefile  README.md  biome.json  data.json  package-lock.json  package.json  pyproject.toml  vitest.config.js
.github/workflows/: release.yml  test.yml  zizmor.yml
debug_toolbar/: middleware.py  settings.py  store.py  toolbar.py  urls.py  utils.py  views.py
debug_toolbar/panels/: __init__.py  ajax.py  cache.py  profiling.py  request.py  settings.py  staticfiles.py
debug_toolbar/panels/history/: panel.py  views.py
debug_toolbar/panels/sql/: forms.py  panel.py  tracking.py  utils.py
debug_toolbar/panels/templates/: panel.py
debug_toolbar/static/debug_toolbar/css/: toolbar.min.css
debug_toolbar/static/debug_toolbar/js/: toolbar.js  toolbar.min.js
debug_toolbar/templates/debug_toolbar/: base.html
debug_toolbar/templates/debug_toolbar/panels/: cache.html  profiling.html  request.html  request_variables.html  settings.html  sql.html  sql_explain.html  sql_profile.html  sql_select.html  staticfiles.html  timer.html
debug_toolbar/toolbar/: loader.py
docs/: changes.rst  configuration.rst  contributing.rst  spelling_wordlist.txt
example/: settings.py  urls.py  views.py
example/async_/: settings.py
example/templates/jinja2/: session.jinja
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_30a126f200a52bd8_jinja2_py.html  z_30a126f200a52bd8_panel_py.html  z_30a126f200a52bd8_views_py.html  z_3f38b1d574d62e51_forms_py.html  z_3f38b1d574d62e51_panel_py.html  z_3f38b1d574d62e51_tracking_py.html  z_3f38b1d574d62e51_utils_py.html  z_3f38b1d574d62e51_views_py.html  z_d2adda62691f23ee___init___py.html  z_d2adda62691f23ee_alerts_py.html  z_d2adda62691f23ee_cache_py.html  z_d2adda62691f23ee_headers_py.html  z_d2adda62691f23ee_profiling_py.html  z_d2adda62691f23ee_settings_py.html  z_d2adda62691f23ee_signals_py.html  z_d2adda62691f23ee_staticfiles_py.html  z_d2adda62691f23ee_timer_py.html  z_d2adda62691f23ee_versions_py.html  z_edc51b47afdc31bb_panel_py.html  z_f39e68f4f9b49f15__compat_py.html  z_f39e68f4f9b49f15_apps_py.html  z_f39e68f4f9b49f15_middleware_py.html  z_f39e68f4f9b49f15_settings_py.html  z_f39e68f4f9b49f15_store_py.html  z_f39e68f4f9b49f15_toolbar_py.html  z_f39e68f4f9b49f15_utils_py.html
tests/: base.py  settings.py  test_integration.py  test_store.py  urls.py  views.py
tests/panels/: test_cache.py  test_history.py  test_request.py  test_sql.py  test_template.py
tests/templates/jinja2/: session.jinja
